--- a/Proyecto_Millonario_DB.Rmd
+++ b/Proyecto_Millonario_DB.Rmd
@@ -47,7 +47,14 @@ frx_EURCNY <- getSymbols(c("EURCNY=X"))
 frx_EURJPY <- getSymbols(c("EURJPY=X"))
 frx_EURUSD <- getSymbols(c("EURUSD=X"))
 
-# chequen como quedaron las bases de datos y si se pueden exportar a csv para mandárselas al Domingo 
+# Era más o menos así
+
+# Se crea un data frame, jajaja que pendejo puse MXD
+
+dframe_USDMXD <- data.frame(USDMXN=X) #Se pone el símbolo, pero por alguna razón se confunde con el "=X" y si lo pongo 
+                                      #en comillas genera un csv pero con el nombre nada más  
+
+create.csv(x = dframe_USDMXD, file = "USDMXN.csv") 
 
 ```
 
