--- a/Proyecto_Millonario_DB.Rmd
+++ b/Proyecto_Millonario_DB.Rmd
@@ -54,7 +54,7 @@ frx_EURUSD <- getSymbols(c("EURUSD=X"))
 dframe_USDMXD <- data.frame(USDMXN=X) #Se pone el símbolo, pero por alguna razón se confunde con el "=X" y si lo pongo 
                                       #en comillas genera un csv pero con el nombre nada más  
 
-create.csv(x = dframe_USDMXD, file = "USDMXN.csv") 
+write_csv(x = dframe_USDMXD, file = "USDMXN.csv") 
 
 ```
 
