--- a/NewscacheR.Rmd
+++ b/NewscacheR.Rmd
@@ -9,17 +9,17 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Paquetes 
+# Apis 
 
-*Guardian News:* 
+*Guardian News API:* 
 
 https://cran.r-project.org/web/packages/guardianapi/index.html
 
-*Media News:*  SÓLO PARA WINDOWS 
+*Media News API:*  SÓLO PARA WINDOWS 
 
 https://cran.r-project.org/web/packages/MediaNews/index.html
 
-*NewsAnchor:* SE NECESITA UNA API KEY DE NEWSAPI, SOLICITAR AQUÍ : https://newsapi.org/
+*NewsAnchor API:* SE NECESITA UNA  SUBSCRIPCIÓN 
 
 https://cran.r-project.org/web/packages/newsanchor/index.html
 
@@ -81,6 +81,14 @@ NEWS_APPL <- get_everything(query = 'Apple', from = min(AAPL_sdf$Date), to = max
 
 # No me dejó jalar desde el 2007 pero dice que podemos sacar hasta el 2021-09-13 (trece de septiembre de 2021) por lo tanto nuestro rango es de 29 días 
 
+NEWS_APPL <- get_everything(query = 'Apple', from = "2021-09-30", to = "2021-10-24", language = 'en', api_key = apikey)
+
+
+View(NEWS_APPL)
+
+NEWS_APPL$results_df
+
+
 # Sin embargo, vamos a tener que volver a llamar a quanteda para aprovechar todos los días posibles 
 
 getSymbols(Symbols = 'AAPL')
@@ -93,19 +101,13 @@ stocks_AAPL <- data.frame(AAPL)
 
 View(stocks_AAPL)
 stocks_AAPL <- as.Date(index(stocks_AAPL))
-
+AAPL
 
 
 
 newsanchor::terms_sources #Aquí están todas las fuentes de la api 
 
 ```
-
-
-
-
-
-
 
 
 
